<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:hint="@string/search"
                android:allowUndo="false"
                android:background="#e7e1e1"
                android:textAlignment="center"
                android:textColor="#c8a2a2"
                android:textColorHint="#689779"
                android:layout_weight="1"
                android:paddingEnd="30dp"
                android:paddingStart="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:maxLines="1"/>

            <Button
                android:id="@+id/map_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:textSize="25dp"
                android:background="#969393"
                android:textColor="#ebe4e4"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:layout_weight="0.01"
                android:layout_margin="10dp"
                android:layout_gravity="center" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.97">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false">
            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>




    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:background="#f8f0f0"
            android:clickable="false">

            <Button
                android:id="@+id/home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_button"
                android:layout_weight="1"
                android:singleLine="false"
                android:clickable="true"
                android:background="#f8f0f0"
                android:textSize="15dp" />
            <Button
                android:id="@+id/whole_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whole"
                android:layout_weight="1"
                android:clickable="true"
                android:background="#f8f0f0"
                android:textSize="15dp" />
            <Button
                android:id="@+id/event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event"
                android:layout_weight="1"
                android:clickable="true"
                android:background="#f8f0f0"
                android:textSize="15dp" />
            <Button
                android:id="@+id/setting_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:layout_weight="1"
                android:clickable="true"
                android:background="#f8f0f0"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
